# openMP

./: CMakeLists.txt  main.cpp
